<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/pizza"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pizza"
            android:src="@drawable/pizza_btn" />

        <ImageButton
            android:id="@+id/sanduiche"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/sanduiche"
            android:src="@drawable/sand" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/pizza" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanduiche" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/pasta"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pasta"
            android:src="@drawable/pasta" />

        <ImageButton
            android:id="@+id/drinks"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/drinks"
            android:src="@drawable/drinks" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pizzatxt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/pasta" />

        <TextView
            android:id="@+id/sanduichetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/bordas"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/bordas"
            android:src="@drawable/bordas" />

        <ImageButton
            android:id="@+id/sobremesa"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/sobremesa"
            android:src="@drawable/sobremesa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bordastxt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/bordas" />

        <TextView
            android:id="@+id/sobremesatxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobremesa" />
    </LinearLayout>

   <fragment
       class="br.com.fiap.pizza.fragment.SubMenuFragment"
       android:id="@+id/myfragment"
       android:layout_width="match_parent"
       android:layout_height="200dp" />
</LinearLayout>